# permutation-entropy

./: .gitignore  README.md  environment.yml  mkdocs-pdf.yml  mkdocs.yml  pyproject.toml  requirements.txt
configs/: default.yaml  example_compute.yaml  example_train.yaml  experiment_grid.yaml  station_X.yaml
data/: README.md
docs/: index.md  shannon.ipynb
docs/api/: entropy.md  features.md  models.md
docs/javascripts/: mathjax.js
docs/paper/: README.md  refs.bib
docs/theory/: 01-intro-seismicity.md  02-permutation-entropy.md  03-mpe-wpe-variants.md  04-ergodic-theory-and-time-series.md  04-time-series-and-complexity.md  05-application-to-eruption-forecasting.md
docs/usage/: 01-installation.md  02-basic-examples.md  03-cli-and-pipelines.md
experiments/exp001_pe_baseline/: README.md  config.yaml  results.csv
experiments/exp002_mpe_multiband/: README.md
experiments/exp003_wpe_weight-schemes/: README.md
experiments/grid/: summary.csv
experiments/grid/m3_tau1_s3_logreg/: forecaster.joblib  metrics.csv
experiments/grid/m3_tau1_s3_random_forest/: features.csv  forecaster.joblib  metrics.csv
experiments/grid/m3_tau1_s5_logreg/: forecaster.joblib  metrics.csv
experiments/grid/m3_tau1_s5_random_forest/: features.csv  forecaster.joblib  metrics.csv
experiments/last_run/: forecaster_gradient_boosting.joblib  forecaster_logreg.joblib  forecaster_random_forest.joblib  metrics.csv  metrics_summary.csv
notebooks/: 00-data-exploration.ipynb  01-pe-vs-mpe-vs-wpe-demo.ipynb  02-feature-engineering.ipynb  03-forecasting-results.ipynb
scripts/: compute_entropy_dataset.py  download_example_data.py  evaluate_model.py  run_grid.py  train_model.py
site/: 404.html  index.html
site/api/models/: index.html
site/javascripts/: mathjax.js
site/paper/: index.html  main.tex
site/search/: search_index.json
src/pevolc/: __init__.py  cli.py
tests/: test_forecasting_pipeline.py  test_mpe.py  test_pe.py  test_seismic_features.py  test_wpe.py
(+89 files in other folders)
